<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/bg_image"
        android:layout_width="0dp"
        android:layout_height="315dp"
        android:background="@drawable/bg_gradient"
        android:padding="90dp"
        android:src="@drawable/ic_increase"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_greeting"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="24dp"
        android:text="@string/txt_greeting"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@id/bg_image"
        app:layout_constraintGuide_begin="300dp" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_white_top_round"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToOutline="false"
            android:clipToPadding="false">

            <TextView
                android:id="@+id/txt_finance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="40dp"
                android:text="@string/finance_management"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/income_card"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="4dp"
                android:clipChildren="false"
                android:clipToOutline="false"
                android:clipToPadding="false"
                app:cardCornerRadius="8dp"
                app:cardElevation="7dp"
                app:layout_constraintEnd_toStartOf="@id/expense_card"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_finance">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:paddingVertical="24dp"
                    android:text="@string/income"
                    android:textColor="#3CAE5C"
                    android:textSize="14sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/expense_card"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="40dp"
                android:clipChildren="false"
                android:clipToOutline="false"
                android:clipToPadding="false"
                app:cardCornerRadius="8dp"
                app:cardElevation="7dp"
                app:layout_constraintBottom_toBottomOf="@id/income_card"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/income_card"
                app:layout_constraintTop_toBottomOf="@id/txt_finance"
                app:layout_constraintTop_toTopOf="@id/income_card">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:paddingVertical="24dp"
                    android:text="@string/expense"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="14sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/balance_card"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="70dp"
                android:layout_marginTop="24dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="7dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/income_card">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:foreground="?selectableItemBackground"
                    android:orientation="vertical"
                    android:paddingBottom="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="8dp"
                        android:text="Balans"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/txt_balance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="16dp"
                        android:textColor="@android:color/black"
                        tools:text="1000000" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>